--- a/javascript/card-maker-using-DOM-6-2.html
+++ b/javascript/card-maker-using-DOM-6-2.html
@@ -92,6 +92,33 @@
       </div> -->
     </div>
     <script>
+      let userData = {
+        1: {
+          name: 'Nishant',
+          profession: 'Front end',
+          email: 'nishant@gmail.dev',
+          url: 'https://images.pexels.com/photos/2379005/pexels-photo-2379005.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1',
+        },
+        2: {
+          name: 'Dhyanesh',
+          profession: 'Front end',
+          email: 'dhyanesh@gmail.dev',
+          url: 'https://images.pexels.com/photos/997489/pexels-photo-997489.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1',
+        },
+        3: {
+          name: 'Milan',
+          profession: 'Full stack',
+          email: 'milan@gmail.dev',
+          url: 'https://images.pexels.com/photos/2128815/pexels-photo-2128815.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1',
+        },
+        4: {
+          name: 'Rakesh',
+          profession: 'Groom',
+          email: 'rakesh@gmail.dev',
+          url: 'https://images.pexels.com/photos/7855991/pexels-photo-7855991.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1',
+        },
+      };
+
       function makeCard(name, post, email, url) {
         let reviewerName = name;
         let reviewerProfession = post;
@@ -177,6 +204,31 @@
 
         makeCard(username, profession, email, photoUrl);
       });
+      // makeCard(
+      //   userData[1].name,
+      //   userData[1].profession,
+      //   userData[1].email,
+      //   userData[1].url
+      // );
+      // makeCard(
+      //   userData[2].name,
+      //   userData[2].profession,
+      //   userData[2].email,
+      //   userData[2].url
+      // );
+      // makeCard(
+      //   userData[3].name,
+      //   userData[3].profession,
+      //   userData[3].email,
+      //   userData[3].url
+      // );
+      // makeCard(
+      //   userData[4].name,
+      //   userData[4].profession,
+      //   userData[4].email,
+      //   userData[4].url
+      // );
+      console.log(userData[1].email);
     </script>
   </body>
 </html>
