--- a/javascript/object-13.2.html
+++ b/javascript/object-13.2.html
@@ -35,7 +35,7 @@
       //   console.log(userInfoObject.userEmail);
       //   console.log(Object.keys(userInfoObject));
       //   console.log(Object.values(userInfoObject));
-      //   console.log(Object.entries(userInfoObject));
+      console.log(Object.entries(userInfoObject));
     </script>
   </body>
 </html>
