--- a/javascript/assignment-hints.html
+++ b/javascript/assignment-hints.html
@@ -89,24 +89,24 @@
       // currentMonth = new Date().getMonth() + 1;
       // currentYear = new Date().getFullYear();
 
-      currentHour = new Date().getHours();
-      currentMinute = new Date().getMinutes();
-      console.log(currentDate);
-      console.log(currentMonth);
-      console.log(currentYear);
-      console.log(currentDay);
-      console.log(currentHour);
-      console.log(currentMinute);
+      // currentHour = new Date().getHours();
+      // currentMinute = new Date().getMinutes();
+      // console.log(currentDate);
+      // console.log(currentMonth);
+      // console.log(currentYear);
+      // console.log(currentDay);
+      // console.log(currentHour);
+      // console.log(currentMinute);
 
-      console.log(
-        `Today is ${currentDay}. Current time is ${currentHour}:${currentHour}:${currentMinute}`
-      );
+      // console.log(
+      //   `Today is ${currentDay}. Current time is ${currentHour}:${currentHour}:${currentMinute}`
+      // );
 
-      obj1 = {};
-      obj2 = {};
+      // obj1 = {};
+      // obj2 = {};
 
-      obj1Keys = Object.keys(obj1);
-      obj2Values = Object.values(obj1);
+      // obj1Keys = Object.keys(obj1);
+      // obj2Values = Object.values(obj1);
       // for(){
       //   //
 
@@ -119,6 +119,15 @@
       // outerloop{
       //   innerloop
       // }
+
+      console.log('30 Days Of JavaScript'.indexOf('a'));
+      console.log('30 Days Of JavaScript'.lastIndexOf('a'));
+
+      str = 'this Is Some String';
+      // console.log(str.split());
+      console.log(str.includes('IS'));
+
+      document.write('anything');
     </script>
   </body>
 </html>
