--- a/Bootstrap/layout-6-4.html
+++ b/Bootstrap/layout-6-4.html
@@ -32,6 +32,12 @@
         <div class="column col2 col">col</div>
       </div>
     </div>
+
+    <img
+      class="img-fluid w-75"
+      src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+      alt=""
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
